--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,10 +1,12 @@
-<h1>Editing category</h1>
-
-<%= render "form", category: @category %>
-
-<br>
-
-<div>
-  <%= link_to "Show this category", @category %> |
-  <%= link_to "Back to categories", categories_path %>
+<div class="mt-5">
+  <h1 class="text-center pt-3">Editing category</h1>
+  
+  <%= render "form", category: @category %>
+  
+  <br>
+  
+  <div>
+    <%= link_to "Show this category", @category %> |
+    <%= link_to "Back to categories", categories_path %>
+  </div>
 </div>
