--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New category</h1>
-
-<%= render "form", category: @category %>
-
-<br>
-
-<div>
-  <%= link_to "Back to categories", categories_path %>
+<div class="mt-5">
+  <h1 class="text-center pt-3">Tambah category</h1>
+  
+  <%= render "form", category: @category %>
+  
+  <br>
+  
+  <div>
+    <%= link_to "Back to categories", categories_path %>
+  </div>
 </div>
