--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -1,10 +1,26 @@
-<h1>Editing menu</h1>
-
-<%= render "form", menu: @menu %>
-
-<br>
-
-<div>
-  <%= link_to "Show this menu", @menu %> |
-  <%= link_to "Back to menus", menus_path %>
+<div class="m-5">
+  <h1 class="text-center pt-3">Editing menu</h1>
+  
+  <%= form_with model: @menu do |f| %>  
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+    <br>
+    <%= f.label :price %><br>
+    <%= f.number_field :price %>
+    <br>
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+    <br>
+    <%= f.label :category_id %><br>
+    <%= f.collection_select :category_id, Category.order(:name), :id, :name, include_blank: true %>
+    <br>
+    <%= f.submit %>
+  <% end %>
+    
+  <br>
+  
+  <div>
+    <%= link_to "Show this menu", @menu %> |
+    <%= link_to "Back to menus", menus_path %>
+  </div>
 </div>
